refactor: boy scout changes